@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: controlconf.c,v 1.40.18.12 2008/01/17 23:45:57 tbox Exp $ */
+/* $Id: controlconf.c,v 1.40.18.13 2008/07/22 03:51:44 marka Exp $ */
 
 /*! \file */
 
@@ -1146,7 +1146,7 @@ add_listener(ns_controls_t *cp, controllistener_t **listenerp,
 
 	if (result == ISC_R_SUCCESS)
 		result = isc_socket_bind(listener->sock,
-					 &listener->address);
+					 &listener->address, 1);
 
 	if (result == ISC_R_SUCCESS && type == isc_sockettype_unix) {
 		listener->perm = cfg_obj_asuint32(cfg_tuple_get(control,
